Jenkins/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ce
  labels:
    run: jenkins-ce
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  - name: jnlp-agents
    port: 50000
    protocol: TCP
  selector:
    run: jenkins-ce
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.danmanners.io`)
      kind: Rule
      services:
        - name: jenkins-ce
          port: 8080
  tls:
    secretName: jenkins-cert
